# xlsx-reader

./: .gitignore  Cargo.toml  README.md  build-mp.sh  build.sh  profiling-size.sh
.cargo/: config.toml
miniprogram/: .eslintrc.cjs  .prettierignore  .prettierrc  package.json  pnpm-lock.yaml  vite.config.ts
miniprogram/src/pages/index/: index.vue
miniprogram/src/utils/: utf-8.ts
miniprogram/src/utils/encoding/: index.ts
miniprogram/src/xlsx-reader/: lib.d.ts  lib.js  lib_bg.wasm  lib_bg.wasm.br  lib_bg.wasm.d.ts
rules/image-process-mp/dts/: init_input.yml  sync_init_input.yml  wbg_init.yml
rules/image-process-mp/js/: const_expected_response_types.yml  wbg_init.yml  wbg_load.yml  web_assembly.yml
src/: lib.rs  utils.rs  xlsx_reader.rs
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts  style.css
web/src/components/: OverlayCard.vue  SheetTableList.vue  ThumbnailCard.vue  XlsxReaderPanel.vue
web/src/composables/: useFilePicker.ts  useObjectUrl.ts
