[package]
name = "xlsx-reader"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
calamine = { version = "0.33.0", default-features = false }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = { version = "0.2.106", default-features = false, features = [] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
